# URI2JSON

./: .env.template  .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go  test
.github/workflows/: deploy.yaml  release.yml  rust-ci.yml
bot/: Cargo.toml
bot/src/: main.rs  text.rs  utils.rs
singbox/: Cargo.toml
singbox/src/: config.rs  lib.rs  main.rs
singbox/src/error/: mod.rs
singbox/src/protocol/: mod.rs
singbox/src/protocol/tls/: mod.rs
singbox/src/protocol/transport/: mod.rs
singbox/src/utils/: mod.rs
src/: config.rs  error.rs  main.rs  protocols.rs
