[package]
name = "uri2json"
version = "0.1.0"
edition = "2021"


[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
base64 = "0.22.1"
tokio = { version = "1.0", features = ["full"] }
rand = "0.9"
log = "0.4"
pretty_env_logger = "0.5"
dotenv = "0.15.0"