[package]
name = "bot"
version = "0.4.0"
edition = "2021"


[dependencies]
singbox ={ version = "0.5.0" ,path = "../singbox"}
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
dotenv = "0.15.0"
teloxide = { version = "0.13.0", features = ["full"] }
chrono = "0.4"
